# preflight_post_processing_app

./: .gitmodules  Doxyfile  Python.gitignore  README.rst  requirements.yml
src/: app_manager.py  launch.py  main_app.py
src/helpers/: nvidia_api_keys.txt
src/helpers/dash_app/: main_dash_app.py
src/helpers/matlab_app/FlightTimeApp/: FlightTime.mlapp  MadMotorV135_MotorData.xlsx  T-MotorA14.xlsx
src/helpers/matlab_app/FlightTimeApp/appdesigner/: appModel.mat
src/helpers/matlab_app/FlightTimeApp/matlab/: document.xml
src/helpers/matlab_app/FlightTimeApp/metadata/: appMetadata.xml  coreProperties.xml  mwcoreProperties.xml  mwcorePropertiesExtension.xml
src/tests/: casadi_integration.py  ga_integration.py  ga_integration_2.py  nvidia_cuopt_integration.py  nx_integration.py  ortools_integration.py  output.py  solution_refinement.py  test_data.kml
src/tests/c_conversion/: CMakeLists.txt
src/tests/c_conversion/main/: field_processing.cpp  field_processing.h  field_processing_binds.cpp  ortools_integration.cpp  test.cpp
src/tests/deprecated_tests/: ga_integration.py  ga_integration_2.py  nvidia_cuopt_integration.py  nx_integration.py  ortools_integration_python.py
src/tests/test_field_data/: test_data.dbf  test_data.shp  test_data.shx  testfield_1.kml  testfield_1_slice.kml  testfield_1_slice_slice.kml  testfield_1_slice_slice_2.kml  testfield_1_slice_slice_3.kml  testfield_2.kml  testfield_3.kml
src/tools/: field_processing.py  output.py  point_cloud_generator.py  units.py
src/tools/drone_presets/: drone_preset.py  motor_data.py
src/tools/field_preprocessing/: field_processing.py
src/tools/field_preprocessing/c_functions/: CMakeLists.txt
src/tools/field_preprocessing/c_functions/main/: field_processing.cpp  field_processing_binds.cpp  ortools_integration.cpp  ortools_integration.h  test.cpp
src/ui/: main_ui.py
src/ui/widgets/drone_presets/: drone_preset_window.py
src/ui/widgets/path_optimization/: path_optimization_window.py
